--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/g6",
-  "version": "3.6.1-beta",
+  "version": "3.6.2",
   "description": "A Graph Visualization Framework in JavaScript",
   "keywords": [
     "antv",
